--- a/sources.bib
+++ b/sources.bib
@@ -18,7 +18,7 @@ MRREVIEWER = {A.\ Dold},
     AUTHOR = {Br\"ocker, Theodor and tom Dieck, Tammo},
      TITLE = {Kobordismentheorie},
     SERIES = {Lecture Notes in Mathematics},
-    VOLUME = {Vol. 178},
+    VOLUME = {178},
  PUBLISHER = {Springer-Verlag, Berlin-New York},
       YEAR = {1970},
      PAGES = {xvi+191},
