--- a/sources.bib
+++ b/sources.bib
@@ -9,7 +9,7 @@
       ISSN = {0008-1981},
    MRCLASS = {57.10},
   MRNUMBER = {126856},
-MRREVIEWER = {A.\ Dold},
+  MRREVIEWER = {A.\ Dold},
        DOI = {10.1017/s0305004100035064},
        URL = {https://doi.org/10.1017/s0305004100035064},
 }
@@ -24,7 +24,7 @@ MRREVIEWER = {A.\ Dold},
      PAGES = {xvi+191},
    MRCLASS = {57.10 (55.00)},
   MRNUMBER = {275446},
-MRREVIEWER = {P.\ S.\ Landweber},
+  MRREVIEWER = {P.\ S.\ Landweber},
 }
 
 @book {lee,
@@ -53,7 +53,7 @@ MRREVIEWER = {P.\ S.\ Landweber},
       ISSN = {0010-2571,1420-8946},
    MRCLASS = {56.0X},
   MRNUMBER = {61823},
-MRREVIEWER = {W.\ S.\ Massey},
+  MRREVIEWER = {W.\ S.\ Massey},
        DOI = {10.1007/BF02566923},
        URL = {https://doi.org/10.1007/BF02566923},
 }
@@ -67,7 +67,7 @@ MRREVIEWER = {W.\ S.\ Massey},
       ISBN = {0-521-79540-0},
    MRCLASS = {55-01 (55-00)},
   MRNUMBER = {1867354},
-MRREVIEWER = {Donald\ W.\ Kahn},
+  MRREVIEWER = {Donald\ W.\ Kahn},
 }
 
 @book {dieck,
@@ -80,7 +80,7 @@ MRREVIEWER = {Donald\ W.\ Kahn},
       ISBN = {978-3-03719-048-7},
    MRCLASS = {55-01},
   MRNUMBER = {2456045},
-MRREVIEWER = {Donald\ M.\ Davis},
+  MRREVIEWER = {Donald\ M.\ Davis},
        DOI = {10.4171/048},
        URL = {https://doi.org/10.4171/048},
 }
@@ -99,10 +99,24 @@ MRREVIEWER = {Donald\ M.\ Davis},
 }
 
 @article{zhang,
-author = {Zhang, Zhuo},
-title = {A Geometric View on Bordism Homology},
-year = {2023},
-month = {12}
+  author = {Zhang, Zhuo},
+  title = {A Geometric View on Bordism Homology},
+  year = {2023},
+  month = {12}
+}
+
+@book {conner,
+    AUTHOR = {Conner, P. E. and Floyd, E. E.},
+     TITLE = {Differentiable periodic maps},
+    SERIES = {Ergebnisse der Mathematik und ihrer Grenzgebiete, (N.F.)},
+    VOLUME = {33},
+ PUBLISHER = {Springer-Verlag, Berlin-G\"ottingen-Heidelberg; Academic
+              Press, Inc., Publishers, New York},
+      YEAR = {1964},
+     PAGES = {vii+148},
+   MRCLASS = {57.10 (55.36)},
+  MRNUMBER = {176478},
+  MRREVIEWER = {E.\ Dyer},
 }
 
 %J. Milnor. On the cobordism ring Ω∗ and a complex analogue, part i. American Journal of
@@ -113,3 +127,5 @@ edu/~nmhopkin/papers/Bordism.pdf, 2016.
 
 P.E. Conner and E.E. Floyd. Differentiable Periodic Maps. Ergebnisse der Mathematik und
 ihrer Grenzgebiete. 2. Folge. Springer Berlin Heidelberg, 2013.
+
+Dold
