--- a/Thesis.tex
+++ b/Thesis.tex
@@ -23,10 +23,11 @@
 \setcounter{section}{-1}
 
 \section{Introduction/Motivation}
+%\includegraphics{galaxy.png}
 
 Recall the definition of homotopy groups \(\pi_n(X)\) as the set of homotopy classes of maps from the \(n\)-sphere \(S^n\) to a space \(X\). 
-The problem with these groups is that they are generally hard to compute, even for simple spaces. 
-For example, the homotopy groups of spheres are not known in general.
+The problem with homotopy groups is that they are, in general, hard to compute, even for simple spaces such as spheres. 
+
 The general idea of bordism is to replace the \(n\)-sphere with a manifold of dimension \(n\) and to consider the homotopy classes of maps from this manifold to a space \(X\).
 
 Testing citations:\cite{atiyah},\cite{brocker},\cite{thom},\cite{lee},\cite{hatcher},\cite{dieck},\cite{luck}
@@ -34,7 +35,6 @@ Testing citations:\cite{atiyah},\cite{brocker},\cite{thom},\cite{lee},\cite{hatc
 \section{Bordism}
 
 \subsection{Manifolds}
-Here, Examples still need to be added.
 
 \begin{definition}[Topological manifold\ {\cite[pp.2-3]{lee}}]
     An \(n\)-dimensional \demph{topological manifold} is a topological space \(M\) such that:
@@ -46,11 +46,31 @@ Here, Examples still need to be added.
     We will often write \(M^n\) for an \(n\)-dimensional manifold.
 \end{definition}
 
+\begin{example}
+    \(\mathbb{R}^n\) is an \(n\)-dimensional topological manifold.
+\end{example}
+
+\begin{example}\label{sphere chart}
+    The \(n\)-dimensional sphere \(S^n\) is an \(n\)-dimensional topological manifold. Hausdorffness and second countability follow from \(S^n\subset \mathbb{R}^{n+1}\). For local Euclideanness, we can use the local charts \[\varphi_i^\pm:U_i:=\{(x_0,\dots,x_n)\in S^n\mid \pm x_i>0\}\to B_1^n(0)\] by \[(x_0,\dots,x_i,\dots,x_n)\mapsto(x_0,\dots,x_{i-1},x_{i+1},\dots,x_n)\]
+\end{example}
+
+\begin{nonexs}
+    %\includegraphics[width=0.2\textwidth]{cross}
+    \begin{itemize}
+        \item Two crossing lines in \(\mathbb{R}^2\) are not a topological manifold, because they are not locally Euclidean at the crossing point. 
+        \item The line with two origins is not a topological manifold. It is not Hausdorff, as the two origins cannot be separated by disjoint open sets.
+        \item \(\coprod_{i\in \mathbb{R}}\{pt\}\) is not a topological manifold, because it is not second countable, as it has uncountably many connected components.
+        \item \(S^1\amalg\{pt\}\) is not a topological manifold, because it is, depending on the point, locally homeomorphic to \(\mathbb{R}^2\) or \(\mathbb{R}\), and the dimension needs to be fixed.
+    \end{itemize}
+\end{nonexs}
+
 \begin{remark}
     One could replace the condition of being second countable with the condition of being paracompact (i.e.\ every open cover of \(M\) admits a locally finite refinement). The following equivalence holds:
     \[\text{second countable}\iff \text{paracompact and countably many connected components}\]
     %This is shown in\ \cite{lee}. --- It is not :(
 \end{remark}
+
+%Being a topological manifold is just a property of a topological space \(M\). We will give manifolds extra structure by defining a smooth structure on them.
 
 \begin{definition}[(Smooth) Atlas\ {\cite[p.12]{lee}}]
     Let \(M\) be a topological manifold. A \demph{(smooth) atlas} \(\mathcal{A}\) on \(M\) is a collection of smooth charts \((U_\alpha,\varphi_\alpha)\) such that:
@@ -60,11 +80,15 @@ Here, Examples still need to be added.
     \end{itemize}
 \end{definition}
 
+\begin{example}
+    The charts we chose for the \(n\)-sphere \(S^n\) in \ref{sphere chart} form a smooth atlas on \(S^n\).
+\end{example}
+
 \begin{definition}[Equivalence of atlases]
     Two atlases \(\mathcal{A}\) and \(\mathcal{A}^\prime\) (on a fixed topological manifold) are said to be \demph{equivalent}, if their union is still on atlas.
 \end{definition}
 
-This is an equivalence relation. --- Sadly, Lee does this over maximal atlases. So I need a different citation.
+It can be shown that this is indeed an equivalence relation, but I will omit the proof here.
 
 \begin{definition}[Smooth manifold\ {\cite[p.13]{lee}}]
     A \demph{smooth manifold} \(M=(M,[\mathcal{A}])\) consists of
@@ -74,9 +98,25 @@ This is an equivalence relation. --- Sadly, Lee does this over maximal atlases. 
     \end{itemize}
 \end{definition}
 
+\begin{example}
+    The \(n\)-sphere \(S^n\) with the atlas given by the charts in \ref{sphere chart} is a smooth manifold.
+\end{example}
+
+\begin{example}[Subset of manifolds]
+    For a manifold \(M,[\mathcal{A}]\) any open subset is a manifold. The atlas is given by restriction of the charts in \([\mathcal{A}]\) to the open subset.
+\end{example}
+
+\begin{example}[Product of manifolds]
+    For manifolds \(M,N\), \(M\times N\) is a manifold with the charts\[\{(U\times V,(\varphi,\psi))\mid(U,\varphi),(V,\psi)\text{ charts of }M,N\}\].
+\end{example}
+
 \begin{remark}
     While being a topological manifold is just a property of the topological space \(M\), begin a smooth manifold gives the manifold extra structure.
 \end{remark}
+
+\begin{example}
+    \(\mathbb{R},[(\mathbb{R},\mathrm{id})]\) and \(\mathbb{R},[\mathbb{R},x\mapsto x^3]\) are two different smooth manifolds, because the transition functions between them are not smooth: \(\mathrm{id}\circ(x\mapsto x^3)^{-1}=(x\mapsto x^{\frac13})\).
+\end{example}
 
 \begin{definition}[Manifold with boundary\ {\cite[p.25]{lee}}]
     To get a definition of a (smooth or topological) \demph{manifold with boundary}, replace the condition of the manifold being locally Euclidean with the condition that every point has a neighbourhood homeomorphic to an open subspace of \(\mathbb{H}^n:=\{(x_1,\dots,x_n)\in\mathbb{R}\mid x_1\geq0\}\) (the half space).
@@ -94,7 +134,7 @@ This is an equivalence relation. --- Sadly, Lee does this over maximal atlases. 
 \end{comment}
 
 \begin{remark}
-    In this thesis, with \emph{manifold} we will always mean a smooth manifold with boundary.
+    In this thesis, with \demph{manifold} we will always mean a smooth manifold with boundary.
 \end{remark}
 
 \begin{definition}[Boundary\ {\cite[p.25]{lee}}]
@@ -102,21 +142,21 @@ This is an equivalence relation. --- Sadly, Lee does this over maximal atlases. 
     If a manifold is compact and has empty boundary, it is called a \demph{closed manifold}. %If a manifold is compact and has non-empty boundary, it is called a \demph{compact manifold with boundary}. If a manifold is not compact, it is called an \demph{open manifold}
 \end{definition}
 
-\begin{example}[Standard \(n\)-disk]
-    The \demph{standard \(n\)-disk} is the set of points in \(\mathbb{R}^n\) such that \(|{x}|\leq1\). 
-    The boundary of the standard \(n\)-disk is the standard \((n-1)\)-sphere.
-    The standard \(n\)-disk is denoted by \(D^n\) and the standard \((n-1)\)-sphere is denoted by \(S^{n-1}\).
+\begin{example}
+    \(([0,1],[([0,1],i)])\), where \(i\) is the inclusion into \(\mathbb{R}\), is a 1-manifold. Its boundary is \(\partial [0,1]=\{0,1\}\).
+\end{example}
+
+\begin{example}
+    \(\mathbb{H}^n\) is a manifold with boundary \(\mathbb{R}^{n-1}\)
+\end{example}
+
+\begin{example}
+    The \(n\)-disk \(D^n\) is a manifold with boundary \(S^{n-1}\)
 \end{example}
 
 \begin{remark}
     The boundary of an \(n\)-dimensional manifold is an \((n-1)\)-dimensional submanifold.
 \end{remark}
-
-Maybe I will make a theorem out of this and add a proof.
-
-\begin{nonex}
-    Line with two origins
-\end{nonex}
 
 %\section{Bordism}
 
@@ -138,7 +178,21 @@ Examples need to be added here, too.
 \end{definition}
 
 \begin{example}
+    For \(X\) the point space, and \(M=S^n\), we have a nullbordism \(B=D^{n+1}\).
 \end{example}
+
+\begin{example}
+    For \(X\) the point space, and \(M=\mathbb{T}^1\) the torus, \(S^1\times D^2\), the filled torus, is a nullbordism.
+\end{example}
+
+\begin{example}
+    For \(M=\emptyset\), any closed manifold is a nullbordism of \(M\), no matter what the space \(X\) is.
+\end{example}
+
+\begin{example}
+    \(X=S^1\), \(M=S^1\), and \(f\) is given by wrapping around the circle twice, a nullbordism is given by the M\"obius strip \(\mathbb{M}\) with \(F\) as projection onto the circle.
+\end{example}
+Draw a picture.
 
 \begin{definition}[Bordant\ {\cite[II, Definition 1.3]{brocker}}]\label{bordant}
     Let \((M,f)\) and \((N,g)\) be singular manifolds in \(X\). We say that \((M,f)\) and \((N,g)\) are \demph{bordant}, if their sum \((M,f)+(N,g):=(M+N, (f,g)):=(M\amalg N, f\amalg g)\) is nullbordant.
@@ -146,30 +200,41 @@ Examples need to be added here, too.
     A nullbordism of \((M,f)+(N,g)\) is called a \demph{bordism} between \((M,f)\) and \((N,g)\).
 \end{definition}
 
-We will sometimes refer to this relation as \demph{bordism relation}.
+We will refer to this relation as \demph{bordism relation}.
 
 \begin{remark}
     \[(M,f)+(\emptyset,g) \text{ are bordant} \iff (M,f) \text{ is nullbordant}\]
 \end{remark}
 
-\begin{example}
-    Cylinder, \dots
+\begin{example}[Cylinder]\label{cylinder bordism}
+    For an arbitrary \(X\), and \((M_1,f_1)=(M_2,f_2)\), we always get the cylinder as a bordism: \((M\times[0,1],f\circ\mathrm{pr}_1)\).
 \end{example}
+Draw a picture
+
+\begin{example}[Pair of pants]
+    For \(X=\mathrm{pt}\), \((M_1,f_1)=(M,f)\amalg (M,f)\) and \(M_2=M\# M\).
+\end{example}
+Look this up again. Maybe it suffices to take \(X\) path-connected. Draw a picture.
 
 \begin{nonex}
+    \(\mathrm{pt}\) and \(\mathrm{pt}\amalg\mathrm{pt}\) are not bordant, as \(1\)-manifolds either have 2 or 0 boundary points.
 \end{nonex}
+Draw a picture.
 
 \begin{proposition}\cite[II, Satz 1.4]{brocker}
     Being bordant is an equivalence relation on the set of singular manifolds.
 \end{proposition}
 
-\begin{proof}\cite{brocker}
+\begin{proof}\cite{brocker}, \cite[p.8]{conner}
     \begin{itemize}
         \item Symmetry: Follows from the symmetry of the disjoint union. If \((M,f)\) and \((N,g)\) are bordant, then there exists a nullbordism of \((M,f)+(N,g)=(M\amalg N, f\amalg g) = (N\amalg M, g\amalg f) = (N,g)+ (M,f)\). So, a bordism between \((M,f)\) and \((N,g)\) is also bordism between \((N,g)\) and \((M,f)\).
-        \item Reflexivity: Cylinder
-        \item Transitivity: Draw a picture
+        \item Reflexivity: We have already constructed a bordism between \(M,f\) and itself In\ \ref{cylinder bordism}.
+        \item Transitivity: Let \(B_1,F_1\) be the bordism between \(M_1,f_1\) and \(M_2,f_2\), and let \(B_2,F_2\) be the bordism between \(M_2,f_2\) and \(M_3,f_3\). Then we can \enquote{glue} the two bordisms together at the common boundary \(M_2,f_2\). We only need to check that the gluing is smooth, i.e. \((B_1,F_1)\cup_{(M_2,f_2)}(B_2,F_2)\) is a smooth manifold. We can find a collar of \(M_2\) in both \(B_1\) and \(B_2\). These collars glued together are homeomorphism to \(M_2\times(-1,1)\). This induces a smooth structure on the glued collar, and let \(B\setminus M_2\) inherit the smooth structure from \(B_1\) and \(B_2\). Then there exists a smooth structure on \(B\) by a previous lemma.
     \end{itemize}
 \end{proof}
+Draw a picture.
+Need to add collar theorem somewhere up.
+and inducing structure.
 
 Check smooth structure!
 
@@ -179,7 +244,7 @@ Check smooth structure!
     \[\mathfrak{N}_n=\{\text{singular \(n\)-manifolds in \(X\)}\}\big/\text{bordism}\]
 \end{definition}
 
-Observe the similarity with the definition of singular homology groups.
+Observe the similarity with the definition of singular homology groups: We defined the singular homology groups as the quotient of kernel and image of some maps. Here, the same thing happens: Our map here is the boundary map.
 
 \begin{theorem}\ \cite[II, Satz 2.1]{brocker}
     The bordism groups are abelian groups with the operation defined in\ \ref{bordant}:
@@ -328,9 +393,10 @@ Need to add: Naturality of the boundary map
 \end{lemma}
 
 This proof is in the absolute case! I need the relative case! (Look in the AT script).
-\begin{proof}\cite{brocker}
-    Let \(f,g:(X,A)\to(Y,B)\) be homotopic maps. Let \(F:X\times I\to Y\) be a homotopy between \(f\) and \(g\). Then we have a bordism between \(f_\ast[M,h]\) and \(g_\ast[M,h]\) by \((M\times I, F\circ (h\times\mathrm{id}_I))\).
+\begin{proof}\cite{brocker}\cite[5.5]{conner}
+    Let \(f,g:(X,A)\to(Y,B)\) be homotopic maps. Let \(h:(X\times I,A\times I)\to (Y,B)\) be a homotopy between \(f\) and \(g\). Then we have a bordism between \(f_\ast[M,F]\) and \(g_\ast[M,F]\) by \((M\times I, h\circ (F\times\mathrm{id}_I))\).
 \end{proof}
+Maybe an explanation in the end (\cite{conner}).
 
 Maybe do an example here. (Special case Cylinder done before showing that bordism is an equivalence relation)
 
@@ -404,7 +470,7 @@ We only need to check the excision axiom now to see that bordism is a homology t
 \begin{proof}\cite{zhang}
 \end{proof}
 
-In the above (nonexistent yet, may look into Connor,Floyd) proof, a smooth \(\alpha\) with regular value \(r\) is constructed.
+In the above (nonexistent yet, may look into Conner,Floyd) proof, a smooth \(\alpha\) with regular value \(r\) is constructed.
 
 \begin{lemma}[{\cite[Lemma 5.8]{zhang}}]\label{plemma2}
     Let \(K,L,M,N\) be as in\ \ref{plemma}. Then,
@@ -599,19 +665,21 @@ Again, \(\Omega_n(X,A)\) is not a \(\mathbb{F}_2\)-vector space. So we get a mor
     Let \(f_0,f_1:(X,A)\to(Y,B)\) be homotopic maps. Then \(f_\ast,g_\ast:\Omega_n(X,A)\to\Omega_n(Y,B)\) are the same homomorphisms.
 \end{lemma}
 
-\begin{proof}\cite{atiyah}
+\begin{proof}\cite{atiyah}, \cite{conner}
     Let \(h:(X,A)\times I\to (Y,B)\) be a homotopy between \(f_0\) and \(f_1\).\\
-    The proof is exactly the same as in the unoriented case.
+    The proof is exactly the same as in the unoriented case; noting that \(\partial B\times I\) is now \(\partial I\times B\cup I\times B^-\).
 \end{proof}
+Look at this more precisely.
 
-\begin{lemma}[Long exact sequence]
+\begin{lemma}[Long exact sequence, \cite{conner}]
     The sequence
     \[\cdots\xrightarrow{\partial}\Omega_n(A)\xrightarrow{i_\ast}\Omega_n(X)\xrightarrow{j_\ast}\Omega_n(X,A)\xrightarrow{\partial}\Omega_{n-1}(A)\xrightarrow{i_\ast}\cdots\]
     is exact.
 \end{lemma}
 
-\begin{proof}
-    The proof is exactly the same as in the unoriented case, we just need to remember that we reverse the orientation of the second singular oriented manifold.
+\begin{proof}\cite{conner}
+    The proof is exactly the same as in the unoriented case, one minor adjustment. For exactness at \(\Omega_n(X,A)\), we identify the boundaries of \((M,f)\) and \(B^-,F\).
+\begin{comment}
     \begin{itemize}
         \item \textbf{Exactness at \(\Omega_n(A)\)}: \(i_\ast\circ\partial=0\), as \((M,f)\) is a nullbordism for \(i_\ast\circ\partial(M,f)=\partial(M,f)\)\\
         For a nullbordism \((B,g)\) of \(M,f\), \(\partial(B,g)=(M,f)\).
@@ -620,8 +688,18 @@ Again, \(\Omega_n(X,A)\) is not a \(\mathbb{F}_2\)-vector space. So we get a mor
 
         \item \textbf{Exactness at \(\Omega_n(X,A)\)}: 
     \end{itemize}
+\end{comment}
 \end{proof}
-I think the whole proof is the same as in the unoriented case\dots
+The used lemma might have to be adjusted.
+
+\begin{lemma}[Excision axiom,\ {\cite[5.7]{conner}}]
+    If \(\overline{U}\subset\overset{\circ}{A}\), then \(i:(X\setminus U, A\setminus U)\subset (X,A)\) induces an isomorphism of relative oriented bordism groups:
+    \[i_\ast:\Omega_n(X\setminus U,A\setminus U)\xrightarrow{\cong}\Omega_n(X,A)\]
+\end{lemma}
+
+\begin{proof}\cite{conner}
+    Again, everything stays the same as in the unoriented case.
+\end{proof}
 
 
 \section{Cobordism}
