--- a/sources.bib
+++ b/sources.bib
@@ -119,6 +119,22 @@
   MRREVIEWER = {E.\ Dyer},
 }
 
+@book {tu,
+    AUTHOR = {Tu, Loring W.},
+     TITLE = {Differential geometry},
+    SERIES = {Graduate Texts in Mathematics},
+    VOLUME = {275},
+      NOTE = {Connections, curvature, and characteristic classes},
+ PUBLISHER = {Springer, Cham},
+      YEAR = {2017},
+     PAGES = {xvi+346},
+      ISBN = {978-3-319-55082-4; 978-3-319-55084-8},
+   MRCLASS = {53-01},
+  MRNUMBER = {3585539},
+       DOI = {10.1007/978-3-319-55084-8},
+       URL = {https://doi.org/10.1007/978-3-319-55084-8},
+}
+
 %J. Milnor. On the cobordism ring Ω∗ and a complex analogue, part i. American Journal of
 Mathematics, 82(3):505–521, 1960.
 
