--- a/preamble.tex
+++ b/preamble.tex
@@ -13,6 +13,14 @@
 \usepackage{BA_Titelseite}
 \usepackage{graphicx}
 \usepackage{wrapfig}
+\usepackage{quiver}
+
+
+\usepackage{pdfsync}
+
+\usepackage{empheq}
+\usepackage{mathrsfs}
+
 
 \graphicspath{ {./images/} }
 
