--- a/preamble.tex
+++ b/preamble.tex
@@ -7,7 +7,7 @@
 \usepackage{tikz, tikz-cd}
 \usepackage{hyperref}
 \usepackage{geometry}
-\usepackage[english, ngerman]{babel}
+\usepackage[english]{babel}
 \usepackage{csquotes}
 \usepackage[backend=biber, style=alphabetic, sorting=nty]{biblatex}
 \usepackage{BA_Titelseite}
