--- a/sources.bib
+++ b/sources.bib
@@ -102,7 +102,9 @@
   author = {Zhang, Zhuo},
   title = {A Geometric View on Bordism Homology},
   year = {2023},
-  month = {12}
+  month = {12},
+  series = {REU University of Chicago},
+  url = {http://math.uchicago.edu/~may/REU2023/REUPapers/Zhang,Zhuo.pdf}
 }
 
 @book {conner,
