--- a/Thesis.tex
+++ b/Thesis.tex
@@ -390,7 +390,8 @@ If \(A=\emptyset\), the definition coincides with the definition of bordism grou
     The following diagram commutes: (Diagrams cannot be compiled for some reason)
     \begin{center}
         \begin{tikzcd}
-            {\mathfrak{N}_n(A)} \arrow[r]& {\mathfrak{N}_{n-1}(X,A)}
+            {\mathfrak{N}_n(A)} \arrow[r, "\partial"] \arrow[d, "{f\restrict{A}}_\ast"'] & {\mathfrak{N}_{n-1}(X,A)}  \arrow[d, "f_\ast"] \\
+            {\mathfrak{N}_n(B)} \arrow[r, "\partial"]  & {\mathfrak{N}_{n-1}(Y,B)}
         \end{tikzcd}
     \end{center}
 \end{lemma}
@@ -524,7 +525,7 @@ Now it already follows that bordism is a homology theory. Let let's take a look 
     is an isomorphism.\\
     \textit{Claim}: \[\iota:\bigoplus_{i\in I}[M_i,f_i]\mapsto \left[\coprod_{i\in I}M_i,\coprod_{i\in I} f_i\right]\]
     gives us the desired isomorphism.\\
-    \textbf{Well-definedness}: All but finitely many \([M_i,f_i]\) are \(0\). So we can assume that \(\coprod M_i\) is a finite disjoint union of compact manifolds, so it is compact.
+    \textbf{Well-definedness}: All but finitely many \([M_i,f_i]\) are \(0\). So we can assume that \(\coprod M_i\) is a finite disjoint union of compact manifolds, so it is compact.\\
     \textbf{Injectivity}: Suppose \(\iota\left(\bigoplus[M_i,f_i]\right)=0\) in \(\mathfrak{N}_n(\coprod X)\). Then there exists a nullbordism \(W,g\) of it. \(W\) as a space is the disjoint union \(\coprod W_i:=\coprod g^{-1}(X_i)\), all of the \(W_i\) being open and closed in \(W\). Hence, \(W_i\) are compact, and manifolds. Also, \(\partial(W_i,g\restrict{W_i})=(M_i,f_i)\), so all the \((M_i,f_i)\) are nullbordant and the sum \(\bigoplus[M_i,f_i]=0\).
     \\
     \textbf{Surjectivity}: Suppose \([M,f]\in\mathfrak{N}_n(\coprod X_i)\). As in the proof of injectivity, we can write \(M=\coprod M_i:=f^{-1}(X_i)\), with all \(M_i\) compact manifolds. Then a preimage of \([M,f]\) under \(\iota\) is \(\bigoplus[M_i,f\restrict{M_i}]\).
@@ -687,9 +688,9 @@ Again, \(\Omega_n(X,A)\) is not a \(\mathbb{F}_2\)-vector space. So we get a mor
 
 \begin{proof}\cite{atiyah}, \cite{conner}
     Let \(h:(X,A)\times I\to (Y,B)\) be a homotopy between \(f_0\) and \(f_1\).\\
-    The proof is exactly the same as in the unoriented case; noting that \(\partial B\times I\) is now \(\partial I\times B\cup I\times B^-\).
+    The proof is exactly the same as in the unoriented case; noting that the cylinder is now oriented and \(\partial M\times I\) is now \(\partial I\times (M\cup M^-)=M\amalg M^-\)%\((\partial I\times M)\cup (I\times M^-)\).
 \end{proof}
-Look at this more precisely.
+Maybe do this more precisely.
 
 \begin{lemma}[Long exact sequence, \cite{conner}]
     The sequence
@@ -698,7 +699,7 @@ Look at this more precisely.
 \end{lemma}
 
 \begin{proof}\cite{conner}
-    The proof is exactly the same as in the unoriented case, one minor adjustment. For exactness at \(\Omega_n(X,A)\), we identify the boundaries of \((M,f)\) and \(B^-,F\).
+    The proof is exactly the same as in the unoriented case, one minor adjustment. For exactness at \(\Omega_n(X,A)\), we identify the boundaries of \((M,f)\) and \((B^-,F)\); \(B\) with the opposite orientation.
 \begin{comment}
     \begin{itemize}
         \item \textbf{Exactness at \(\Omega_n(A)\)}: \(i_\ast\circ\partial=0\), as \((M,f)\) is a nullbordism for \(i_\ast\circ\partial(M,f)=\partial(M,f)\)\\
@@ -722,8 +723,12 @@ The used lemma might have to be adjusted.
 \end{proof}
 
 \begin{lemma}[Disjoint union axiom]
-    same-same
+    Relative oriented bordism satisfies the disjoint union axiom.
 \end{lemma}
+
+\begin{proof}
+    The proof can be copied from the unoriented case.
+\end{proof}
 
 We can finally conclude:
 \begin{theorem}
@@ -794,9 +799,11 @@ Maybe it is enough to just say that these are called this way because the Grassm
 
 
 \begin{theorem}[Freudenthal suspension theorem]\label{freudenthal}
+    For large enough \(n\), the suspension map
+    \[[\sus^nX,\sus^nY]\to[\sus^{n+1}Xm\sus^{n+1}Y]\]
+    is an isomorphism.
 \end{theorem}
 
-No proof.
 
 \begin{lemma}\label{natural map}\cite{thom}
     The natural map
@@ -815,8 +822,10 @@ No proof.
 
 \begin{definition}[relative oriented cobordism group\ {\cite[p.201]{atiyah}}]
     Let \((X,Y)\) be a pair of spaces, then for \(k\in\mathbb{Z}\), the \(k\)\demph{-th oriented cobordism group} is
-    \[MSO^k(X,Y)=\lim_{n\to\infty}[\sus^{n-k}(X\big/Y),MSO(n)]\]
+    \[\Omega^k(X,Y):=MSO^k(X,Y)=\lim_{n\to\infty}[\sus^{n-k}(X\big/Y),MSO(n)]\]
     with respect to the above map.
+    Analogously, we define the \demph{relative unoriented cobordism group} as
+    \[\mathfrak{N}^k(X,Y):= MO^k(X,Y)=\lim_{n\to\infty}[\sus^{n-k}(X\big/ Y),MO(n)]\]
 \end{definition}
 
 \subsubsection{The Eilenberg-Steenrod axioms}
@@ -825,19 +834,47 @@ To get a definition for cohomology theories, intuitively, we \enquote{reverse al
 \begin{definition}[Cohomology theory\ {\cite[Definition 5.2]{luck}}]
     A \demph{cohomology theory} \(\mathcal{H}^\ast=(\mathcal{H}^\ast,\partial^\ast)\) with coefficients in \(R\)-modules is a contravariant functor \[\mathcal{H}^\ast:\mathrm{TOP}^2\to\mathbb{Z}\text{-graded }R\text{-modules}\] together with a natural transformation \[\partial^\ast:\mathcal{H}^\ast\circ I\to\mathcal{H}^{\ast+1}\] satisfying the following axioms:
     \begin{itemize}
-        \item \textbf{Homotopy invariance}
-        \item \textbf{Long exact sequence}
-        \item \textbf{Excision}
+        \item \textbf{Homotopy invariance} For homotopic maps of pairs \(f,g:(X,A\to Y,B)\), we have \[\mathcal{H}^n(f)=\mathcal{H}^n(g):\mathcal{H}^n(Y,B)\to\mathcal{H}^n(X,A)\]
+        \item \textbf{Long exact sequence} For a pair of spaces \((X,A)\), the sequence \[\dots\xrightarrow{\partial^{n-1}}\mathcal{H}^n(X,A)\xrightarrow{\mathcal{H}^n(j)}\mathcal{H}^n(X)\xrightarrow{\mathcal{H}^n(i)}\mathcal{H}^n(A)\xrightarrow{\partial^n(X,A)}\mathcal{H}^{n+1}(X,A)\rightarrow\dots\] is exact, where \(i:A\hookrightarrow X\) and \(j:(X,\emptyset)\hookrightarrow (X,A)\) are the inclusions.
+        \item \textbf{Excision} Let \((X,B,A)\) be a triple of spaces such that \(\overline{A}\subseteq\overset{\circ}{B}\). Then the inclusion map \(i:(X\setminus A,B\setminus A)\hookrightarrow(X,B)\) induces an isomorphism of cohomology groups: \[\mathcal{H}^n(i):\mathcal{H}^n(X,B)\xrightarrow{\cong}\mathcal{H}^n(X\setminus A, B\setminus A)\]
     \end{itemize}
     Sometimes one adds the following axioms:
     \begin{itemize}
         \item \textbf{Disjoint union axiom}
+        For a disjoint union of spaces \(\coprod_{i\in I}X_i\) over any index set \(I\) and the inclusions \(j_i:X_i\to\coprod_{i\in I}X_i\), the map
+        \[\prod_{i\in I}\mathcal{H}^n(j_i):\mathcal{H}^n\left(\coprod_{i\in I X_i}\right)\xrightarrow{\cong}\prod_{i\in I}\mathcal{H}^n(X_i)\]
         \item \textbf{Dimension axiom}
+        For all \(n\in\mathbb{Z}\), we have \[\mathcal{H}^n(\{\mathrm{pt}\})\cong\begin{cases} R, & n=0\\ 0, & n\neq0\end{cases}\]
     \end{itemize}
 \end{definition}
 
 \subsubsection{Bordism cohomology}
 Again, we will check the axioms one by one.
+
+\begin{lemma}[Functoriality]
+\end{lemma}
+
+\begin{lemma}[Naturality]
+\end{lemma}
+
+\begin{lemma}[Homotopy invariance]
+\end{lemma}
+
+\begin{lemma}[Long exact sequence]
+\end{lemma}
+
+\begin{lemma}[Excision]
+\end{lemma}
+
+\begin{lemma}[Disjoint union axiom]
+\end{lemma}
+
+\begin{observation}[Dimension axiom]
+\end{observation}
+
+Conclude:
+\begin{theorem}[Bordism cohomology theory]
+\end{theorem}
 
 \subsubsection{Calculations}
 
